# LANTransfer

./: .gitignore  README.md  RELEASE.md  build-local.sh  icon-preview.html  index.html  log.txt  package-lock.json  package.json  tailwind.config.js
.github/workflows/: build.yml
src/: App.tsx  i18n.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: crypto.rs  device.rs  file_transfer.rs  main.rs  network.rs  transfer_manager.rs  tray.rs
src/components/: PerformanceMonitor.tsx
